@@ -11,6 +11,7 @@ import com.lernia.auth.entity.CourseReviewEntity;
 import com.lernia.auth.entity.UniversityReviewEntity;
 import com.lernia.auth.entity.UniversityEntity;
 import com.lernia.auth.entity.LocationEntity;
+import com.lernia.auth.entity.UserEntity;
 import com.lernia.auth.repository.CourseRepository;
 import com.lernia.auth.repository.CourseReviewRepository;
 import com.lernia.auth.repository.UniversityRepository;
@@ -24,6 +25,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -37,7 +39,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/admin")
@@ -54,6 +55,7 @@ public class AdminController {
     private final UniversityReviewRepository universityReviewRepository;
 
     @GetMapping("/users")
+    @Transactional(readOnly = true)
     public ResponseEntity<List<UserProfileResponse>> getAllUsers() {
         List<UserProfileResponse> users = userRepository.findAll().stream().map(u -> {
             UserProfileResponse r = new UserProfileResponse();
@@ -68,33 +70,26 @@ public class AdminController {
             r.setUserRole(u.getUserRole() != null ? u.getUserRole().name() : null);
             r.setPremium(u.getUserRole() != null && "PREMIUM".equals(u.getUserRole().name()));
             return r;
-        }).collect(Collectors.toList());
+        }).toList();
+
         return ResponseEntity.ok(users);
     }
 
     @GetMapping("/universities")
+    @Transactional(readOnly = true)
     public ResponseEntity<List<UniversityDTOLight>> getAllUniversities() {
-        var list = universityRepository.findAll().stream()
-                .map(university -> new UniversityDTOLight(
-                        university.getId(),
-                        university.getName(),
-                        university.getDescription(),
-                        university.getLocation() != null ? new LocationDTO(
-                                university.getLocation().getId(),
-                                university.getLocation().getCity(),
-                                university.getLocation().getCountry(),
-                                university.getLocation().getCostOfLiving()) : null))
+        List<UniversityDTOLight> list = universityRepository.findAll().stream()
+                .map(this::mapToUniversityDTOLight)
                 .toList();
 
         return ResponseEntity.ok(list);
     }
 
-    // Create University
     @PostMapping("/universities")
-    public ResponseEntity<?> createUniversity(@RequestBody UniversityDTO dto) {
+    @Transactional
+    public ResponseEntity<UniversityDTOLight> createUniversity(@RequestBody UniversityDTO dto) {
         if (dto == null || dto.getName() == null || dto.getName().isBlank()) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Map.of("message", "University name is required"));
+            return ResponseEntity.badRequest().build();
         }
 
         UniversityEntity entity = new UniversityEntity();
@@ -113,36 +108,25 @@ public class AdminController {
         }
 
         UniversityEntity saved = universityRepository.save(entity);
-
-        UniversityDTOLight res = new UniversityDTOLight(
-                saved.getId(),
-                saved.getName(),
-                saved.getDescription(),
-                saved.getLocation() != null ? new LocationDTO(
-                        saved.getLocation().getId(),
-                        saved.getLocation().getCity(),
-                        saved.getLocation().getCountry(),
-                        saved.getLocation().getCostOfLiving()) : null);
-        return ResponseEntity.status(HttpStatus.CREATED).body(res);
+        return ResponseEntity.status(HttpStatus.CREATED).body(mapToUniversityDTOLight(saved));
     }
 
-    // Update University
     @PutMapping("/universities/{id}")
-    public ResponseEntity<?> updateUniversity(@PathVariable Long id, @RequestBody UniversityDTO dto) {
+    @Transactional
+    public ResponseEntity<UniversityDTOLight> updateUniversity(@PathVariable Long id, @RequestBody UniversityDTO dto) {
         if (id == null || id <= 0) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Map.of("message", "Invalid university id"));
+            return ResponseEntity.badRequest().build();
         }
 
         Optional<UniversityEntity> opt = universityRepository.findById(id);
         if (opt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Map.of("message", "University not found"));
+            return ResponseEntity.notFound().build();
         }
 
         UniversityEntity entity = opt.get();
-        if (dto.getName() != null && !dto.getName().isBlank())
+        if (dto.getName() != null && !dto.getName().isBlank()) {
             entity.setName(dto.getName());
+        }
         entity.setDescription(dto.getDescription());
         entity.setContactInfo(dto.getContactInfo());
         entity.setWebsite(dto.getWebsite());
@@ -159,40 +143,23 @@ public class AdminController {
         }
 
         UniversityEntity saved = universityRepository.save(entity);
-
-        UniversityDTOLight res = new UniversityDTOLight(
-                saved.getId(),
-                saved.getName(),
-                saved.getDescription(),
-                saved.getLocation() != null ? new LocationDTO(
-                        saved.getLocation().getId(),
-                        saved.getLocation().getCity(),
-                        saved.getLocation().getCountry(),
-                        saved.getLocation().getCostOfLiving()) : null);
-        return ResponseEntity.ok(res);
+        return ResponseEntity.ok(mapToUniversityDTOLight(saved));
     }
 
-    // Delete University
     @DeleteMapping("/universities/{id}")
-    public ResponseEntity<?> deleteUniversity(@PathVariable Long id) {
+    @Transactional
+    public ResponseEntity<Void> deleteUniversity(@PathVariable Long id) {
         if (id == null || id <= 0) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Map.of("message", "Invalid university id"));
+            return ResponseEntity.badRequest().build();
         }
 
-        Optional<UniversityEntity> opt = universityRepository.findById(id);
-        if (opt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Map.of("message", "University not found"));
+        if (!universityRepository.existsById(id)) {
+            return ResponseEntity.notFound().build();
         }
 
-        // prevent deletion if there are courses referencing this university (FK
-        // constraint)
-        boolean hasCourses = courseRepository.findAll().stream()
-                .anyMatch(c -> c.getUniversity() != null && id.equals(c.getUniversity().getId()));
+        boolean hasCourses = courseRepository.existsByUniversityId(id);
         if (hasCourses) {
-            return ResponseEntity.status(HttpStatus.CONFLICT)
-                    .body(Map.of("message", "Cannot delete university with associated courses"));
+            return ResponseEntity.status(HttpStatus.CONFLICT).build();
         }
 
         universityRepository.deleteById(id);
@@ -200,6 +167,7 @@ public class AdminController {
     }
 
     @GetMapping("/courses")
+    @Transactional(readOnly = true)
     public ResponseEntity<List<CourseLightDTO>> getAllCourses() {
         List<CourseLightDTO> list = courseRepository.findAll().stream()
                 .map(course -> new CourseLightDTO(
@@ -215,6 +183,7 @@ public class AdminController {
     }
 
     @DeleteMapping("/users/{id}")
+    @Transactional
     public ResponseEntity<Void> deleteUserById(@PathVariable Long id) {
         if (id == null || id <= 0) {
             return ResponseEntity.badRequest().build();
@@ -224,8 +193,7 @@ public class AdminController {
         if (authentication != null && authentication.isAuthenticated()) {
             String currentUsername = authentication.getName();
             if (currentUsername != null) {
-                Optional<com.lernia.auth.entity.UserEntity> currentUser = userRepository
-                        .findByUsername(currentUsername);
+                Optional<UserEntity> currentUser = userRepository.findByUsername(currentUsername);
                 if (currentUser.isPresent() && currentUser.get().getId().equals(id)) {
                     return ResponseEntity.status(HttpStatus.CONFLICT).build();
                 }
@@ -241,6 +209,7 @@ public class AdminController {
     }
 
     @PostMapping("/users/{id}/reset-password")
+    @Transactional
     public ResponseEntity<Map<String, String>> resetUserPassword(@PathVariable Long id) {
         if (id == null || id <= 0) {
             return ResponseEntity.badRequest().build();
@@ -254,27 +223,27 @@ public class AdminController {
             authService.adminResetPassword(id);
             return ResponseEntity.ok(Map.of("message", "Password reset email sent successfully"));
         } catch (IllegalStateException e) {
-            return ResponseEntity.badRequest()
-                    .body(Map.of("message", e.getMessage()));
+            return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
         }
     }
 
     @GetMapping("/analytics")
+    @Transactional(readOnly = true)
     public ResponseEntity<AnalyticsDTO> getAnalytics() {
         return ResponseEntity.ok(analyticsService.getAnalytics());
     }
 
     @GetMapping("/reviews")
-    public List<ReviewDTO> getAllReviews() {
+    @Transactional(readOnly = true)
+    public ResponseEntity<List<ReviewDTO>> getAllReviews() {
         List<ReviewDTO> result = new ArrayList<>();
 
-        // Course reviews
         for (CourseReviewEntity cr : courseReviewRepository.findAll()) {
             ReviewDTO dto = new ReviewDTO();
             dto.setId(cr.getId());
-            dto.setUserId(cr.getUser().getId());
-            dto.setUserName(cr.getUser().getName());
-            dto.setCourseId(cr.getCourse().getId());
+            dto.setUserId(cr.getUser() != null ? cr.getUser().getId() : null);
+            dto.setUserName(cr.getUser() != null ? cr.getUser().getName() : null);
+            dto.setCourseId(cr.getCourse() != null ? cr.getCourse().getId() : null);
             dto.setUniversityId(null);
             dto.setRating(cr.getRating());
             dto.setTitle(cr.getTitle());
@@ -283,14 +252,13 @@ public class AdminController {
             result.add(dto);
         }
 
-        // University reviews
         for (UniversityReviewEntity ur : universityReviewRepository.findAll()) {
             ReviewDTO dto = new ReviewDTO();
             dto.setId(ur.getId());
-            dto.setUserId(ur.getUser().getId());
-            dto.setUserName(ur.getUser().getName());
+            dto.setUserId(ur.getUser() != null ? ur.getUser().getId() : null);
+            dto.setUserName(ur.getUser() != null ? ur.getUser().getName() : null);
             dto.setCourseId(null);
-            dto.setUniversityId(ur.getUniversity().getId());
+            dto.setUniversityId(ur.getUniversity() != null ? ur.getUniversity().getId() : null);
             dto.setRating(ur.getRating());
             dto.setTitle(ur.getTitle());
             dto.setDescription(ur.getDescription());
@@ -298,19 +266,40 @@ public class AdminController {
             result.add(dto);
         }
 
-        return result;
+        return ResponseEntity.ok(result);
     }
 
-    @DeleteMapping("/reviews/{id}")
-    public ResponseEntity<Void> deleteReview(@PathVariable Long id) {
-        if (courseReviewRepository.existsById(id)) {
-            courseReviewRepository.deleteById(id);
-            return ResponseEntity.noContent().build();
+    @DeleteMapping("/reviews/course/{id}")
+    @Transactional
+    public ResponseEntity<Void> deleteCourseReview(@PathVariable Long id) {
+        if (!courseReviewRepository.existsById(id)) {
+            return ResponseEntity.notFound().build();
         }
-        if (universityReviewRepository.existsById(id)) {
-            universityReviewRepository.deleteById(id);
-            return ResponseEntity.noContent().build();
+        courseReviewRepository.deleteById(id);
+        return ResponseEntity.noContent().build();
+    }
+
+    @DeleteMapping("/reviews/university/{id}")
+    @Transactional
+    public ResponseEntity<Void> deleteUniversityReview(@PathVariable Long id) {
+        if (!universityReviewRepository.existsById(id)) {
+            return ResponseEntity.notFound().build();
         }
-        return ResponseEntity.notFound().build();
+        universityReviewRepository.deleteById(id);
+        return ResponseEntity.noContent().build();
+    }
+
+    // Auxiliar para evitar repetição do mapeamento de UniversityDTOLight
+    private UniversityDTOLight mapToUniversityDTOLight(UniversityEntity university) {
+        return new UniversityDTOLight(
+                university.getId(),
+                university.getName(),
+                university.getDescription(),
+                university.getLocation() != null ? new LocationDTO(
+                        university.getLocation().getId(),
+                        university.getLocation().getCity(),
+                        university.getLocation().getCountry(),
+                        university.getLocation().getCostOfLiving()) : null
+        );
     }
 }
