@@ -1,22 +1,21 @@
 package com.lernia.auth.service;
 
-import java.time.LocalDate;
-import java.util.List;
-import java.util.Optional;
-
-import com.lernia.auth.dto.request.ChangePasswordRequest;
-import com.lernia.auth.dto.request.ForgotPasswordRequest;
-import com.lernia.auth.dto.request.ResetPasswordRequest;
-import com.lernia.auth.dto.response.PasswordResetTokenResponse;
-import com.lernia.auth.dto.request.LoginRequest;
-import com.lernia.auth.dto.request.RegisterRequest;
+import com.lernia.auth.dto.request.*;
 import com.lernia.auth.dto.response.LoginResponse;
+import com.lernia.auth.dto.response.PasswordResetTokenResponse;
 import com.lernia.auth.dto.response.RegisterResponse;
 import com.lernia.auth.dto.response.UserProfileResponse;
+import com.lernia.auth.entity.PasswordResetTokenEntity;
+import com.lernia.auth.entity.UserEntity;
+import com.lernia.auth.entity.enums.AuthProvider;
+import com.lernia.auth.entity.enums.Gender;
+import com.lernia.auth.entity.enums.UserRole;
+import com.lernia.auth.repository.UserRepository;
+import com.lernia.auth.service.PasswordResetTokenService.GeneratedToken;
+import jakarta.persistence.EntityNotFoundException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -25,16 +24,13 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.context.SecurityContextRepository;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import com.lernia.auth.entity.UserEntity;
-import com.lernia.auth.entity.enums.AuthProvider;
-import com.lernia.auth.entity.enums.Gender;
-import com.lernia.auth.entity.enums.UserRole;
-import com.lernia.auth.repository.UserRepository;
-import com.lernia.auth.entity.PasswordResetTokenEntity;
-import com.lernia.auth.service.PasswordResetTokenService.GeneratedToken;
+import java.time.LocalDate;
+import java.util.List;
 
 @Service
+@RequiredArgsConstructor
 public class AuthService {
 
     private final UserRepository userRepository;
@@ -46,18 +42,7 @@ public class AuthService {
     @Value("${app.frontend.url}")
     private String frontendUrl;
 
-    public AuthService(UserRepository userRepository,
-            PasswordEncoder passwordEncoder,
-            SecurityContextRepository securityContextRepository,
-            PasswordResetTokenService passwordResetTokenService,
-            EmailService emailService) {
-        this.userRepository = userRepository;
-        this.passwordEncoder = passwordEncoder;
-        this.securityContextRepository = securityContextRepository;
-        this.passwordResetTokenService = passwordResetTokenService;
-        this.emailService = emailService;
-    }
-
+    @Transactional
     public RegisterResponse register(RegisterRequest req) {
         if (userRepository.existsByUsername(req.getUsername())) {
             return new RegisterResponse("Username already taken", "error");
@@ -66,14 +51,12 @@ public class AuthService {
             return new RegisterResponse("Email already registered", "error");
         }
 
-        String hash = passwordEncoder.encode(req.getPassword());
         UserEntity user = new UserEntity();
         user.setUsername(req.getUsername());
         user.setName(req.getName());
         user.setEmail(req.getEmail());
-        user.setPassword(hash);
+        user.setPassword(passwordEncoder.encode(req.getPassword()));
         user.setProvider(AuthProvider.LOCAL);
-        user.setProviderId(null);
         user.setGender(Gender.OTHER);
         user.setUserRole(UserRole.REGULAR);
         user.setCreationDate(LocalDate.now());
@@ -83,36 +66,28 @@ public class AuthService {
     }
 
     public LoginResponse login(LoginRequest req, HttpServletRequest request, HttpServletResponse response) {
-        String text = req.getText();
-        Optional<UserEntity> userOpt = userRepository.findByUsername(text);
-        if (userOpt.isEmpty())
-            userOpt = userRepository.findByEmail(text);
-        if (userOpt.isEmpty()) {
+        String identifier = req.getText();
+        UserEntity user = userRepository.findByUsernameOrEmail(identifier, identifier)
+                .orElse(null);
+
+        if (user == null || user.getPassword() == null || !passwordEncoder.matches(req.getPassword(), user.getPassword())) {
             return new LoginResponse("Invalid credentials", "error");
         }
 
-        UserEntity user = userOpt.get();
-
-        if (!passwordEncoder.matches(req.getPassword(), user.getPassword())) {
-            return new LoginResponse("Invalid credentials", "error");
-        }
-
-        // --- Create Session ---
         SecurityContext context = SecurityContextHolder.createEmptyContext();
-        String roleName = (user.getUserRole() != null) ? user.getUserRole().name() : UserRole.REGULAR.name();
+        UserRole role = user.getUserRole() != null ? user.getUserRole() : UserRole.REGULAR;
+
         UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
                 user.getUsername(),
                 null,
-                List.of(new SimpleGrantedAuthority("ROLE_" + roleName)));
+                List.of(new SimpleGrantedAuthority("ROLE_" + role.name())));
+
         context.setAuthentication(authToken);
         SecurityContextHolder.setContext(context);
-
         securityContextRepository.saveContext(context, request, response);
 
-        UserProfileResponse profile = map(user);
-
         LoginResponse res = new LoginResponse("Login successful", "success");
-        res.setUser(profile);
+        res.setUser(mapToProfile(user));
         return res;
     }
 
@@ -122,29 +97,30 @@ public class AuthService {
         securityContextRepository.saveContext(context, request, response);
     }
 
+    @Transactional
     public void deleteAccount(Long id) {
         if (!userRepository.existsById(id)) {
-            throw new RuntimeException("User not found");
+            throw new EntityNotFoundException("User not found with id: " + id);
         }
-
         userRepository.deleteById(id);
     }
 
+    @Transactional
     public void changePassword(Long userId, ChangePasswordRequest req) {
         UserEntity user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + userId));
 
-        if (req.getCurrentPassword() == null || req.getCurrentPassword().trim().isEmpty() ||
-                req.getNewPassword() == null || req.getNewPassword().trim().isEmpty()) {
+        if (req.getCurrentPassword() == null || req.getCurrentPassword().isBlank() ||
+                req.getNewPassword() == null || req.getNewPassword().isBlank()) {
             throw new IllegalArgumentException("Passwords cannot be empty");
         }
 
         if (req.getCurrentPassword().equals(req.getNewPassword())) {
-            throw new IllegalArgumentException("New password cannot be the same as the current password");
+            throw new IllegalArgumentException("New password cannot be the same as current password");
         }
 
-        if (!passwordEncoder.matches(req.getCurrentPassword(), user.getPassword())) {
-            throw new RuntimeException("Incorrect current password");
+        if (user.getPassword() == null || !passwordEncoder.matches(req.getCurrentPassword(), user.getPassword())) {
+            throw new IllegalArgumentException("Incorrect current password");
         }
 
         user.setPassword(passwordEncoder.encode(req.getNewPassword()));
@@ -163,6 +139,7 @@ public class AuthService {
         return new PasswordResetTokenResponse(message);
     }
 
+    @Transactional
     public void resetPassword(ResetPasswordRequest req) {
         PasswordResetTokenEntity token = passwordResetTokenService.validate(req.getToken())
                 .orElseThrow(() -> new IllegalArgumentException("Invalid or expired token"));
@@ -172,25 +149,9 @@ public class AuthService {
         passwordResetTokenService.consume(token);
     }
 
-    private UserProfileResponse map(UserEntity u) {
-        UserProfileResponse r = new UserProfileResponse();
-        r.setId(u.getId());
-        r.setUsername(u.getUsername());
-        r.setName(u.getName());
-        r.setEmail(u.getEmail());
-        r.setAge(u.getAge());
-        r.setGender(u.getGender() != null ? u.getGender() : null);
-        r.setLocation(u.getLocation());
-        r.setJobTitle(u.getJobTitle());
-        r.setUserRole(u.getUserRole() != null ? u.getUserRole().name() : null);
-        r.setProvider(u.getProvider() != null ? u.getProvider().name() : null);
-        r.setPremium(u.getUserRole() != null && "PREMIUM".equals(u.getUserRole().name()));
-        return r;
-    }
-
     public void adminResetPassword(Long userId) {
         UserEntity user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + userId));
 
         if (user.getEmail() == null || user.getEmail().isBlank()) {
             throw new IllegalStateException("User does not have an email address");
@@ -199,5 +160,21 @@ public class AuthService {
         GeneratedToken generated = passwordResetTokenService.createToken(user);
         String resetLink = frontendUrl + "/reset-password?token=" + generated.token();
         emailService.sendPasswordResetEmail(user.getEmail(), resetLink);
+    }
+
+    private UserProfileResponse mapToProfile(UserEntity u) {
+        UserProfileResponse r = new UserProfileResponse();
+        r.setId(u.getId());
+        r.setUsername(u.getUsername());
+        r.setName(u.getName());
+        r.setEmail(u.getEmail());
+        r.setAge(u.getAge());
+        r.setGender(u.getGender());
+        r.setLocation(u.getLocation());
+        r.setJobTitle(u.getJobTitle());
+        r.setUserRole(u.getUserRole() != null ? u.getUserRole().name() : null);
+        r.setProvider(u.getProvider() != null ? u.getProvider().name() : null);
+        r.setPremium(u.getUserRole() == UserRole.PREMIUM);
+        return r;
     }
 }
